2008-04-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.h src/misc.c(lf_push): Track recursion depth for load_file().

2008-04-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c src/mouse.c src/os2/gclient.c src/win/wgraph.c
	src/wxterminal/wxt_gui.cpp configure.in docs/gnuplot.doc:
	New configure option  --disable-raise-console
	If, like me, you hate the program messing with your desktop state and
	also want to be able to type <space> while the cursor is over the plot
	window, then this option is for you.

2008-04-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open): Clear auto-generated key title from previous
	plot, if any.
	Bug #1929227

2008-04-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (parse_primary_expression) src/parse.h:
	Track highest data column referred to in an expression.

	* src/datafile.c (plot_option_using): Use info returned by perm_at()
	to update the highest data column used.  This allows us to catch at
	least the simple case of autotitle columnheader for 'using 1:($3)'.
	Delete previous ugly code to approximate this for binary files.
	Bug #1929227

	* term/post.trm (PS_set_font): Avoid segfault if the font name is longer
	than 32 characters.  The {ai grass next openstep} terminals suffer from
	the same problem, but since they are moribund just let it go.
	Bug #1935919

	* term/gd.trm: Track ttf font names using dynamically-allocated strings
	rather than fixed arrays.
	Bug #1935919

	* src/datafile.c (expect_string):  Dead code (test is invariably false)
	* docs/gnuplot.doc: Remove redundant links to shell/system section
	* term/emf.trm: Remove dead code
	* term/pbm.trm: Document that output image size is padded to nearest
	  multiple of 8 pixels on both x and y.

	* docs/gnuplot.texi:  Sync to current docs

2008-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Yet one more place ymax -> ymax-1.
